<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" >צחוקים</string>
    <string name="ExitString" >יציאה</string>
    <string name="share_str" >נשלח מאפליקציית צחוקים באנדרואיד</string>
    <string name="share_btn" >Share!</string>
    <string name="cancel" >Cancel</string>
    <string name="send" >שלח</string>
    <string name="request" >Request!</string>
    <string name="upload" >Upload Photo</string>
    <string name="post" >Wall Post!</string>
    <string name="delete" >Delete Post</string>
    <string name="ReportPrbolemTitle" >דווח על בעייה בבדיחה</string>
    <string name="ReportContent" >ניתן להוסיף טקסט לדיווח.</string>
	<string name="DeleteFromFavoriteTitle" >מחק ממועדפים</string>
	<string name="DeleteFromFavoriteContent" >האם אתה בטוח שאתה רוצה למחוק את הבדיחה מתוך המועדפים שלך?</string>
	<string name="Yes" >כן</string>
	<string name="No" >לא</string>
  	<string name="close_and_dont_show" >סגור ואל תציג יותר</string>
	<string name="network_inactive" >הרשת אינה זמינה</string>
	<string name="reconnect_network" >אנא התחבר לאינטרנט ונסה שנית</string>
	<string name="exit" >יציאה</string>
	<string name="close" >סגור</string>
	<string name="close_app_msg" >האם אתה בטוח שאתה רוצה לצאת ?</string>
	<string name="yes" >כן</string>
	<string name="no" >לא</string>
	<string name="share_image_app_premote" >לבדיחות נוספות הכנס לאפליקציה שלנו: צחוקים</string>
	<string name="order_by_random" >מיון רנדומלי</string>
	<string name="order_by_popular" >פופולריות</string>
	<string name="favorites" >מועדפים</string>
	<string name="top_ten" >10 הגדולים</string>
	<string name="randon_joke" >בדיחה אקראית</string>
	<string name="order_by" >מיון לפי...</string>
	<string name="loading" >טוען...</string>
	<string name="no_joke_found" >לא נמצאו בדיחות</string>
	<string name="categories_footer_add_new_joke" >הוסף בדיחה</string>
	<string name="categories_footer_random" >בדיחה אקראית</string>
	<string name="categories_footer_top_jokes" >עשרת הגדולים</string>
	<string name="category_footer_read" >קראתי</string>
	<string name="category_footer_unread" >לא קראתי</string>
	<string name="category_footer_all" >הכל</string>
	<string name="add_new_joke_title" >כותרת:</string>
	<string name="add_new_joke_category" >קטגוריה:</string>
	<string name="add_new_joke_joke" >בדיחה:</string>
	<string name="add_new_joke_utube" >uTube:</string>
	<string name="add_new_joke_email" >אי-מייל:</string>
	<string name="add_new_joke_user_name" >שם משתמש:</string>
	<string name="add_new_joke_button" >שלח את הבדיחה שלי</string>
	<string name="adding_new_joke">רושם בדיחה חדשה...</string>
	<string name="adding_new_joke_failed">תקלה! הבדיחה לא נרשמה.\n נסה שנית.</string>
	<string name="adding_new_joke_done">הבדיחה נרשמה, תודה.</string>
	<string name="register_new_joke_fotter">אינך חייב להזין משתמש ומייל</string>
	<string name="fb_name" >צחוקים בפייסבוק</string>
	<string name="banner_ad_unit_id">ca-app-pub-3673655951523256/1208572922</string>	
</resources>
