<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="center_horizontal" 
  android:layout_gravity="center_horizontal"
  android:baselineAligned="false" 
  android:orientation="vertical"
  android:background="#ffffff"
  >
   
    <RelativeLayout 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:background="@drawable/top" 
			android:layout_alignParentTop="true"
			android:id="@+id/AndNewTop"
			>
	   
			<Button 
			    android:id="@+id/CancelJokeAdd" 
			    android:layout_width="60dp"  
	            android:background="@drawable/home" 
	            android:layout_height="60dp"
	            android:textSize="10dp"
	            android:layout_margin="10dp" 
	            ></Button>  

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="122dp"
            android:layout_height="80dp"
            android:layout_margin="5dp" 
			android:src="@drawable/logo_small"
            android:layout_centerHorizontal="true"
             />

	</RelativeLayout>
	<TextView 
	            android:id="@+id/RegisterJokeResult" 
	    		android:layout_gravity="center"  
                android:layout_height="wrap_content" 
                android:text="" 
                android:layout_width="fill_parent"  
                android:textSize="16dp" 
                android:textColor="#ff0000"
                android:gravity="center" 
				android:layout_margin="3dp"
				android:layout_below="@+id/AndNewTop"
				
				></TextView>
	 <LinearLayout
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent" 
		android:gravity="center_vertical" 
		android:orientation="vertical"
		android:layout_above="@+id/blahblah"
		android:layout_below="@+id/RegisterJokeResult"
		
	
	>
	<ScrollView 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" 
		android:fillViewport="true"
	>
    <LinearLayout 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">
     
            <!-- Title-->  
            <TextView android:layout_height="wrap_content" 
                 android:layout_width="match_parent"  
                 android:gravity="center" 
                 android:layout_gravity="right"
                 android:layout_margin="10dp"
                 android:text="@string/add_new_joke_title"
                 />
        	<EditText 
        	    android:gravity="right" 
        	    android:id="@+id/addJokeTitle" 
        	    android:layout_height="35dp" 
        	    android:layout_width="match_parent" 
        	    android:layout_gravity="right" 
        	    android:textSize="20px" 
        	   >
                <requestFocus></requestFocus>
            </EditText>
        
	        <!-- Category -->  
	        <TextView android:layout_height="wrap_content" 
                 android:layout_width="match_parent"  
                 android:gravity="center" 
                 android:layout_gravity="right"
                 android:layout_margin="10dp"
                 android:text="@string/add_new_joke_category"
                 />
      		<Spinner  android:id="@+id/categoriesList" 
	            android:layout_height="35dp" 
	            android:layout_width="match_parent" 
	            android:layout_gravity="right" 
	            android:textSize="20px" 
	             ></Spinner>
	        
	          
 				<!-- Joke -->  
      	      <TextView android:layout_height="wrap_content" 
     	          android:id="@+id/jokeStrDesc"
               android:layout_width="match_parent"  
               android:gravity="center" 
               android:layout_gravity="right"
               android:layout_margin="10dp"
               android:text="@string/add_new_joke_joke"
               />
      	      <EditText android:id="@+id/addJokeStr" 
        	    android:layout_height="wrap_content" 
        	    android:layout_width="match_parent" 
        	    android:layout_gravity="right" 
        	    android:textSize="20px"  
        	    android:gravity="right" 
        	    android:inputType="textMultiLine" 
        	    android:lines="10"></EditText>
        
			<!-- User Email -->  
              <TextView android:layout_height="wrap_content" 
                 android:layout_width="match_parent"  
                 android:gravity="center" 
                 android:layout_gravity="right"
                 android:layout_margin="10dp"
                 android:text="@string/add_new_joke_email"
                 />
			<EditText android:id="@+id/addUserEmail" 
        	    android:layout_height="30dp" 
        	    android:layout_width="match_parent" 
        	    android:layout_gravity="right|top" 
        	    android:textSize="20px" ></EditText>
        
			<!-- User Name -->  
              <TextView android:layout_height="wrap_content" 
                 android:layout_width="match_parent"  
                 android:gravity="center" 
                 android:layout_gravity="right"
                 android:layout_margin="10dp"
                 android:text="@string/add_new_joke_user_name"
                 />        
            <EditText android:id="@+id/addUserName" 
        	    android:layout_height="30dp" 
        	    android:layout_width="match_parent" 
        	    android:layout_gravity="right|top" 
        	    android:textSize="20px" ></EditText>
    </LinearLayout>
</ScrollView>
</LinearLayout>
	    
    <TextView
        android:id="@+id/blahblah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal"
        android:text="@string/register_new_joke_fotter"
        android:layout_above="@+id/SendNewJoke"
        android:layout_marginTop="5dp"
        />
 
    <Button 
        android:text="@string/add_new_joke_button"
			    android:id="@+id/SendNewJoke" 
			    android:layout_width="match_parent"  
			    android:layout_height="wrap_content"  
			    android:background="@drawable/footer_selector" 
	           	android:layout_alignParentBottom="true"
	           	android:layout_centerHorizontal="true"
	           	 style="@android:style/TextAppearance.Medium"
	            />  
</RelativeLayout>

