<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff"
    >
  
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/CategoriesTopPanel"
	    android:orientation="horizontal" 
	    android:background="@drawable/top" 
	    android:gravity="center_horizontal"
	    android:layout_alignParentTop="true"
	    >

        <ImageView
            android:id="@+id/ReviewUs"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="20dp" 
            android:layout_gravity="center_vertical|center_horizontal"
            android:src="@drawable/android" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="122dp"
            android:layout_height="80dp"
            android:layout_marginTop="5dp" 
            android:layout_marginBottom="5dp" 
            android:src="@drawable/logo_small" />

        <Button
            android:id="@+id/GoToFavorites"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp" 
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/folder_favorites" />

	</LinearLayout>
	
   <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/adsLayout"
	    android:orientation="horizontal" 
	    android:background="@drawable/top" 
	    android:gravity="center_horizontal"
        android:layout_below="@+id/CategoriesTopPanel"
	     >
	    <com.google.android.gms.ads.AdView
	        android:id="@+id/adView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_alignParentBottom="true"
	        ads:adSize="BANNER"
	        ads:adUnitId="@string/banner_ad_unit_id">
	    </com.google.android.gms.ads.AdView>
    </LinearLayout>
        <WebView
            android:id="@+id/WebView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adsLayout"
            android:layout_centerHorizontal="true"
            />
                 
	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:fillViewport="true"
        android:layout_below="@+id/WebView"
        android:layout_above="@+id/CategoriesBttomPanel"
        >
    <LinearLayout
        android:id="@+id/dummyLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
		>
    <TableLayout
        android:id="@+id/categoriesTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left" 
        android:stretchColumns="*"
        >
    </TableLayout>
     
	</LinearLayout>
            
	</ScrollView>
	<LinearLayout
            android:id="@+id/CategoriesBttomPanel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" 
            android:layout_alignParentBottom="true"
            android:weightSum="3">


<Button
    android:background="@drawable/footer_selector"
            android:id="@+id/AddJoke"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/categories_footer_add_new_joke"
            style="@android:style/TextAppearance.Medium"
            />

		    <View
    			android:layout_height="1dp"
        		android:layout_width="1dp"
    			android:background="@android:color/darker_gray"/>
		   <Button
            android:id="@+id/RandomJoke"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:background="@drawable/footer_selector"
            android:text="@string/categories_footer_random"
            style="@android:style/TextAppearance.Medium"
            />
		    <View
    			android:layout_height="1dp"
        		android:layout_width="1dp"
    			android:background="@android:color/darker_gray"/>
		    <Button
            android:id="@+id/TopTen"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:background="@drawable/footer_selector"
            android:text="@string/categories_footer_top_jokes"
            style="@android:style/TextAppearance.Medium"
             />
		</LinearLayout>
</RelativeLayout>