<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ads="http://schemas.android.com/apk/res-auto"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:gravity="center_horizontal" 
  android:layout_gravity="center_horizontal"
  android:baselineAligned="false"
  android:orientation="vertical"
  android:background="#ffffff"
  >
 
      <LinearLayout 
        android:id="@+id/CategoryTopPanel" 
        android:background="@drawable/top" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        >
	    
	    <RelativeLayout 
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent" 
			>
			
			<Button 
			    android:id="@+id/BackToCategories" 
			    android:layout_marginRight="5dp" 
			    android:layout_width="60dp"  
	            android:background="@drawable/home" 
	            android:layout_height="60dp"
	            android:textSize="10dp"
	            android:layout_marginLeft="20dp" 
	            android:layout_marginTop="5dp" 
	            android:layout_marginBottom="5dp" 
	            android:layout_alignParentLeft="true"
	            ></Button>    
			
			<ImageView 
			    android:id="@+id/categoryImage" 
				android:layout_marginRight="15dp" 
				android:layout_gravity="center_horizontal"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:layout_marginTop="5dp" 
	            android:layout_marginBottom="5dp" 
	           
				></ImageView>
			
	        <Button 
	            android:id="@+id/SortingBtn" 
	            android:layout_width="40dp"  
	            android:background="@drawable/sorting_icon" 
	            android:layout_height="40dp"
	            android:textSize="10dp"
	            android:gravity="center_horizontal"
	            android:layout_alignParentRight="true" 
	            android:layout_marginRight="20dp" 
	            android:layout_marginTop="15dp" 
	            android:layout_marginBottom="5dp" 
	           
	            
	             ></Button>
		</RelativeLayout>
	</LinearLayout>

    
   	 <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/adViewCategory"
	    android:orientation="horizontal" 
	    android:background="@drawable/top" 
	    android:gravity="center_horizontal"
        android:layout_below="@+id/CategoryTopPanel"
	     >
	     <com.google.android.gms.ads.AdView
	        android:id="@+id/adView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_alignParentBottom="true"
	        ads:adSize="BANNER"
	        ads:adUnitId="@string/banner_ad_unit_id">
	    </com.google.android.gms.ads.AdView>
	</LinearLayout>
   <ScrollView android:id="@+id/ScrollView01"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent" 
				android:layout_weight="0.15"
				android:fillViewport="true"
				android:layout_below="@+id/adViewCategory"
				android:layout_above="@+id/CategoryBttomPanel">
       		>
			<LinearLayout  android:id="@+id/linearLayout2" 
							android:layout_height="wrap_content" 
							android:layout_width="wrap_content" 
							android:orientation="vertical">
			</LinearLayout>
		
   </ScrollView>
   
 		<LinearLayout
            android:id="@+id/CategoryBttomPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" 
            android:weightSum="3"
            android:layout_alignParentBottom="true"
            >

		    <Button
            android:id="@+id/ShowUnreadJokes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/category_footer_unread"
            style="@android:style/TextAppearance.Medium"
            android:paddingTop="10dp"
			android:paddingBottom="10dp"
            android:background="@drawable/footer_selector"
			/>
		    <View
    			android:layout_height="1dp"
        		android:layout_width="1dp"
    			android:background="@android:color/darker_gray"/>
		   <Button
            android:id="@+id/ShowReadJokes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
			android:paddingBottom="10dp"
            android:text="@string/category_footer_read"
            style="@android:style/TextAppearance.Medium"
            android:background="@drawable/footer_selector"
			/>
		    <View
    			android:layout_height="1dp"
        		android:layout_width="1dp"
    			android:background="@android:color/darker_gray"/>
		    <Button
            android:id="@+id/ShowAllJokes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/category_footer_all"
            style="@android:style/TextAppearance.Medium"
            android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:background="@drawable/footer_selector"
			
             />
		    
		</LinearLayout>
               
</RelativeLayout>
